@@ -1,5 +1,5 @@
 PACKAGE = "hachoir-core"
-VERSION = "1.2.1"
+VERSION = "1.2.2"
 WEBSITE = 'http://hachoir.org/wiki/hachoir-core'
 LICENSE = 'GNU GPL v2'
 
